[INJIWEB-1203] use object mapper of jackson library to deserialize issuer class and remove annotations related to gson & remove unused QrCOdeTypeDeserializer and update test cases
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>